@@ -197,7 +197,10 @@ A Space Adventure:
  + A few campaign missions now save your personal best successes (e.g. fastest finish in Hard Flying) which get shown after you finish them agin
  + Add skip to a few missions where it doesn't hurt
  + Menu: Show 2 flowers over fully completed planets (with side missions)
+ + Allow skipping in some missions
  * Remove checkpoints in: Getting to the device and Searching in the dust. There was a good chance for these missions to become unwinnable
+ * Searching in the dust: Fix Hog Solo dropping straight down when roping near smuggler
+ * Searching in the dust: Fix incorrect messages after collecting device part
  * Hard Flying: Fix ending in a Lua error
  * The First Stop: Fix stats screen showing teams twice
  * Killing The Specialists: Fix killing hog with Deagle gave you chance to use another weapon in same turn
